--- a/colabcat.ipynb
+++ b/colabcat.ipynb
@@ -29,7 +29,7 @@
         "# Check GPU Specs\n",
         "!nvidia-smi"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -82,7 +82,7 @@
         "!ls /content/drive/My\\ Drive/dothashcat\n",
         "!ln -s /content/drive/My\\ Drive/dothashcat /root/.hashcat"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
         "!git clone https://github.com/hashcat/hashcat.git\n",
         "!cd hashcat && git submodule update --init && make && make install"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,65 +188,12 @@
         "# Check the Hashcat Version to make sure it's installed correctly\n",
         "!hashcat --version"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "v5.1.0-1846-gf92df252\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UFwpl__HVvJ3",
-        "colab_type": "code",
-        "outputId": "c34693c8-74a7-4fc1-bb7f-da5bc8d6fcc5",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 493
-        }
-      },
-      "source": [
-        "# WPA2 EAPOL Benchmark (change this to check the speed of whichever hash you're cracking)\n",
-        "!hashcat -w 4 -m 2500 --benchmark"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "hashcat (v5.1.0-1846-gf92df252) starting in benchmark mode...\n",
-            "\n",
-            "\u001b[33m* Device #1: This hardware has outdated CUDA compute capability (3.7).\u001b[0m\n",
-            "\u001b[33m             For modern OpenCL performance, upgrade to hardware that supports\u001b[0m\n",
-            "\u001b[33m             CUDA compute capability version 5.0 (Maxwell) or higher.\u001b[0m\n",
-            "\u001b[33m* Device #2: This hardware has outdated CUDA compute capability (3.7).\u001b[0m\n",
-            "\u001b[33m             For modern OpenCL performance, upgrade to hardware that supports\u001b[0m\n",
-            "\u001b[33m             CUDA compute capability version 5.0 (Maxwell) or higher.\u001b[0m\n",
-            "\u001b[31mnvmlDeviceGetFanSpeed(): Not Supported\u001b[0m\n",
-            "\n",
-            "CUDA API (CUDA 10.1)\n",
-            "====================\n",
-            "* Device #1: Tesla K80, 11373/11441 MB, 13MCU\n",
-            "\n",
-            "OpenCL API (OpenCL 1.2 CUDA 10.1.152) - Platform #1 [NVIDIA Corporation]\n",
-            "========================================================================\n",
-            "* Device #2: Tesla K80, skipped\n",
-            "\n",
-            "Benchmark relevant options:\n",
-            "===========================\n",
-            "* --workload-profile=4\n",
-            "\n",
-            "Hashmode: 2500 - WPA-EAPOL-PBKDF2 (Iterations: 4095)\n",
-            "\n",
-            "Speed.#1.........:    88331 H/s (300.57ms) @ Accel:16 Loops:512 Thr:1024 Vec:1\n",
-            "\n",
-            "Started: Tue Jun  9 13:15:14 2020\n",
-            "Stopped: Tue Jun  9 13:15:36 2020\n"
           ],
           "name": "stdout"
         }
@@ -275,7 +222,7 @@
         "\n",
         "!ls /root/wordlists/SecLists"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,32 +238,6 @@
             "CONTRIBUTING.md  Fuzzing  Miscellaneous     Payloads   Web-Shells\n",
             "CONTRIBUTORS.md  IOCs\t  Passwords\t    README.md\n",
             "Discovery\t LICENSE  Pattern-Matching  Usernames\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yIkXZRlEFUIz",
-        "colab_type": "code",
-        "outputId": "959ca063-ac12-4b98-cfab-f0572bb05e42",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "# Check that your hashes are accessible to Colab\n",
-        "!ls /root/.hashcat/hashes"
-      ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "test.hccapx\n"
           ],
           "name": "stdout"
         }
@@ -342,9 +263,13 @@
         "# !hashcat --session $SESSION --restore\n",
         "\n",
         "# Crack with a wordlist\n",
-        "!hashcat -m 2500 /root/.hashcat/hashes/test.hccapx /root/wordlists/SecLists/Passwords/Leaked-Databases/rockyou-75.txt"
+        "!hashcat --force -w4 -m 1000 -o /root/.hashcat/output/pwned-passwords_v5.out --remove /root/.hashcat/hashes/pwned-passwords-ntlm.txt /root/.hashcat/wordlist/pwned-passwords-2.0.txt\n",
+        "!hashcat --force -w4 -m 1000 -o /root/.hashcat/output/pwned-passwords_v5.out --remove /root/.hashcat/hashes/pwned-passwords-ntlm.txt /root/wordlists/SecLists/Passwords/probable-v2-top12000.txt\n",
+        "!hashcat --force -w4 -m 1000 -o /root/.hashcat/output/pwned-passwords_v5.out --remove /root/.hashcat/hashes/pwned-passwords-ntlm.txt /root/.hashcat/wordlist/crackstation.txt\n",
+        "!hashcat --force -w4 -m 1000 -r /root/.hashcat/rules/OneRuleToRuleThemAll.rule -o /root/.hashcat/output/pwned-passwords_v5.out --remove /root/.hashcat/hashes/pwned-passwords-ntlm.txt /root/.hashcat/wordlist/rockyou.txt\n",
+        "!hashcat --force -w4 -m 1000 -o /root/.hashcat/output/pwned-passwords_v5.out --increment -1 ?l?d?s?u ?1?1?1?1?1 /root/.hashcat/hashes/pwned-passwords-ntlm.txt"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
